<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ice Cube: It Was A Good Day</string>
    <string name="action_settings">Settings</string>
    <string name="lyrics">[Ice Cube]\nBreak \'em off somethin\n[inhales] Shit..\n[exhales] Yo..\nYo.. uhh..\n\n[Verse One]\nJust wakin up in the mornin gotta thank God\nI don\'t know but today seems kinda odd\nNo barkin from the dog, no smog\nAnd momma cooked a breakfast with no hog (damn)\nI got my grub on, but didn\'t pig out\nFinally got a call from a girl I wanna dig out\n(Whassup?) Hooked it up for later as I hit the do\'\nThinkin will I live, another twenty-fo\'\nI gotta go cause I got me a drop top\nAnd if I hit the switch, I can make the ass drop\nHad to stop, at a red light\nLookin in my mirror and not a jacker in sight\nAnd everything is alright\nI got a beep from Kim, and she can fuck all night\nCalled up the homies and I\'m askin y\'all\nWhich park, are y\'all playin basketball?\nGet me on the court and I\'m trouble\nLast week fucked around and got a triple double\nFreakin niggaz everyway like M.J.\nI can\'t believe, today was a good day (shit!)\n\n[Verse Two]\nDrove to the pad and hit the showers\nDidn\'t even get no static from the cowards\nCause just yesterday them fools tried to blast me\nSaw the police and they rolled right past me\nNo flexin, didn\'t even look in a nigga\'s direction\nas I ran the intersection\nWent to $hort Dog\'s house, they was watchin Yo! MTV Raps\nWhat\'s the haps on the craps?\nShake \'em up, shake \'em up, shake \'em up, shake \'em\nRoll \'em in a circle of niggaz and watch me break \'em\nwith the seven, seven-eleven, seven-eleven\nSeven even back do\' Lil\' Joe\nI picked up the cash flow\nThen we played bones, and I\'m yellin domino\nPlus nobody I know got killed in South Central L.A.\nToday was a good day (shit!)\n\n[Verse Three]\nLeft my nigga\'s house paid (what)\nPicked up a girl been tryin to fuck since the 12th grade\nIt\'s ironic, I had the brew she had the chronic\nThe Lakers beat the Supersonics\nI felt on the big fat fanny\nPulled out the jammy, and killed the punanny\nAnd my dick runs deep, so deep\nSo deep put her ass to sleep\nWoke her up around one\nShe didn\'t hesitate, to call Ice Cube the top gun\nDrove her to the pad and I\'m coastin\nTook another sip of the potion hit the three-wheel motion\nI was glad everything had worked out\nDropped her ass off and then chirped out\nToday was like one of those fly dreams\nDidn\'t even see a berry flashin those high beams\nNo helicopter looking for a murder \nTwo in the mornin got the Fatburger \nEven saw the lights of the Goodyear Blimp\nAnd it read, "Ice Cube\'s a pimp" (yeah)\nDrunk as hell but no throwin up \nHalf way home and my pager still blowin up\nToday I didn\'t even have to use my A.K.\nI got to say it was a good day (shit!)\n\n[Ice Cube]\nHey wait, wait a minute Pooh, stop this shit\nWhat the fuck I\'m thinkin about?\nWriter(s): O. Jackson, C. Mayfield, G. Clinton, W. Collins, O\'shea Jackson, B. Worrell, Curtis Mayfield\n
Copyright: Gangsta Boogie Music, Warner-tamerlane Publishing Corp., A Side Music LLC O.B.O. Rubber Band Music Inc., Universal Music Corp., WB Music Corp.</string>
    <string name="artdescription">ice cube in a car</string>
    <string name="meme">Meme</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
</resources>
