<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/ice_cube"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/artdescription"
        android:src="@drawable/ice_cube" />


    <Button
        android:id="@+id/memebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/facebookbutton"
        android:layout_toRightOf="@+id/twitterbutton"
        android:onClick="openMeme"
        android:text="@string/meme" 
        android:background="#092e20"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginLeft="8dp"
        />

    <Button
        android:id="@+id/twitterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/facebookbutton"
        android:layout_toRightOf="@+id/facebookbutton"
        android:onClick="openTwitter"
        android:text="@string/twitter" 
        android:background="#55acee"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginLeft="8dp"
        />

    <Button
        android:id="@+id/facebookbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="openFB"
        android:text="@string/facebook" 
        android:background="#3b5998"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginLeft="8dp"/>
    <ScrollView
        android:id="@+id/scrolly"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/ice_cube"
        android:layout_above="@id/facebookbutton" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics"
            android:textSize="14sp"
            android:textColor="#000000"
            android:textStyle="italic" />
    </ScrollView>
</RelativeLayout>